infrastructure/apps/powerdns/powerdns-admin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: powerdns
spec:
  type: ClusterIP
  # loadBalancerIP: 192.168.1.155
  ports:
    - name: "powerdns-admin"
      port: 80
      targetPort: 80
  selector:
    powerdns: admin
# status:
#   loadBalancer: {}
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: powerdns-admin-data
#   labels:
#     powerdns: admin
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: powerdns
spec:
  replicas: 1
  selector:
    matchLabels:
      powerdns: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        powerdns: admin
    spec:
      restartPolicy: Always
      containers:
        - env:
            # https://github.com/PowerDNS-Admin/PowerDNS-Admin/blob/master/configs/docker_config.py
            # OIDC_*, MAIL_*, SAML_*, SQLALCHEMY_*
            - name: SQLALCHEMY_DATABASE_URI
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: sql_url
            - name: SQLALCHEMY_ENGINE_OPTIONS
              # https://docs.sqlalchemy.org/en/20/core/engines.html
              # echo{_pool} can also be debug
              # https://docs.sqlalchemy.org/en/20/core/engines.html#sqlalchemy.create_engine.params.execution_options
              # https://docs.sqlalchemy.org/en/20/core/connections.html#sqlalchemy.engine.Connection.execution_options
              value: |-
                {
                  "echo": "True"
                  "echo_pool": "True"
                }
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: api_key
            - name: PDNS_SITE_NAME
              value: powerdns.sharing.io Administration
            - name: PDNS_URL
              value: http://auth-web:8081
            - name: PDNS_VERSION
              value: 4.8.1
            - name: PDNS_ZONES
              value: |-
                sharing.io
                container.sharing.io
            - name: PDNS_ADMIN_USER
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: admin_user
            - name: PDNS_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: admin_password
            - name: PDNS_ADMIN_EMAIL
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: admin_email
            # - name: SQLALCHEMY_DATABASE_URI
            #   value: sqlite:////data/powerdns-admin.db
            # https://goauthentik.io/integrations/services/powerdns-admin/
            - name: SAML_CERT
              value: "/saml.crt"
            - name: SAML_METADATA_URL
              value: https://sso.sharing.io/application/saml/powerdns/metadata/
            - name: SAML_LOGOUT_URL
              value: https://sso.sharing.io/application/saml/slo/powerdns/binding/redirect/
            - name: SAML_DEBUG
              value: "True"
            - name: SAML_ENABLED
              value: "True"
            - name: SAML_PATH
              value: os.path.join(os.path.dirname(file), 'saml')
            - name: SAML_METADATA_CACHE_LIFETIME
              value: "1"
            - name: SAML_SP_ENTITY_ID
              value: pdns-admin
            - name: SAML_SP_CONTACT_NAME
              value: Hippie Hacker
            - name: SAML_SP_CONTACT_MAIL
              value: hh@ii.coop
            - name: SAML_NAMEID_FORMAT
              value: urn:oasis:names:tc:SAML:2.0:nameid-format:persistent
            - name: SAML_ATTRIBUTE_USERNAME
              value: http://schemas.goauthentik.io/2021/02/saml/username
            - name: SAML_ATTRIBUTE_NAME
              value: http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name
            - name: SAML_ATTRIBUTE_EMAIL
              value: http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress
            - name: SAML_ATTRIBUTE_GROUP
              value: http://schemas.xmlsoap.org/claims/Group
            - name: SAML_GROUP_ADMIN_NAME
              value: ???
            - name: SAML_SIGN_REQUEST
              value: "False"
            - name: SAML_ASSERTION_ENCRYPTED
              value: "False"
            - name: SAML_WANT_MESSAGE_SIGNED
              value: "False"
          image: powerdnsadmin/pda-legacy:v0.3.0
          name: admin
          ports:
            - containerPort: 80
          # https://github.com/PowerDNS-Admin/PowerDNS-Admin#option-2-using-docker-compose (port 9191 or 80?)
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "nc -vz 127.0.0.1 80 2>/dev/null"]
            initialDelaySeconds: 80
          volumeMounts:
            - mountPath: /data
              name: powerdns-admin
            - mountPath: /app/pdns-poststart.py
              name: powerdns-config
              subPath: pdns-poststart.py
            - mountPath: /saml.crt
              name: powerdns-secrets
              subPath: authentik_cert
          resources: {}
          # # FIXME: Better approach to dns-poststart
          # lifecycle:
          #   postStart:
          #     exec:
          #       command:
          #         - "sh"
          #         - "-c"
          #         - "cd /app && /usr/bin/python3 pdns-poststart.py"
      volumes:
        - name: powerdns-config
          defaultMode: 0755
          configMap:
            name: jinja-templates
        # - name: powerdns-config
        #   configMap:
        #     name: jinja-templates
        - name: powerdns-admin
          persistentVolumeClaim:
            claimName: powerdns-admin
        - name: powerdns-secrets
          secret:
            secretName: powerdns
          # note: the leading zero means this number is in octal representation: do not remove it
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powerdns
  namespace: powerdns
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-pdns
  #   # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "powerdns.sharing.io"
  rules:
    - host: "powerdns.sharing.io"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin
                port:
                  number: 80
